Impact analysis display: cosmetics on tooltips: widen a bit the tooltips and prevent the text from overflowing horizontally.
SVN:trunk[4224]

--- a/css/light-grey.css
+++ b/css/light-grey.css
@@ -1449,6 +1449,8 @@ div.ui-dialog-header {
 .ui-tooltip {
   padding: 10px 10px;
   box-shadow: 0 0 7px black;
+  max-width: 350px;
+  overflow: hidden;
 }
 .ui-tooltip .arrow {
   width: 70px;
